#38 Fix: Users truncate, code amend, code review

--- a/style/components/avatar.css
+++ b/style/components/avatar.css
@@ -19,3 +19,7 @@
   width: 2rem;
   height: 2rem;
 }
+
+.avatar.more-users {
+  border-bottom: none;
+}
