--- a/style/components/related-project-lists-item.css
+++ b/style/components/related-project-lists-item.css
@@ -30,5 +30,4 @@
 
 .related-projects-list-item .footer .users {
   gap: 0.3rem;
-  overflow-y: hidden;
 }
