--- a/style/components/stats.css
+++ b/style/components/stats.css
@@ -4,10 +4,6 @@
   align-items: center;
 }
 
-.stats {
-  justify-content: space-between;
-}
-
 .stats .item {
   gap: 1rem;
 }
